# flexiv_code_niwesh

./: .gitignore  README.md
flexiv_moveit_codes_niwesh/: CMakeLists.txt  package.xml
flexiv_moveit_codes_niwesh/config/: aruco_pose_config.yaml  config.yaml  flexiv_servo.yaml  pbvs_controller_config.yaml
flexiv_moveit_codes_niwesh/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
flexiv_moveit_codes_niwesh/install/flexiv_moveit_codes_niwesh/share/flexiv_moveit_codes_niwesh/: package.bash  package.zsh
flexiv_moveit_codes_niwesh/launch/: pbvs.launch.py  start_servo.launch.py
flexiv_moveit_codes_niwesh/log/: latest_build
flexiv_moveit_codes_niwesh/src/pbvs/: aruco_pose_estimator.cpp  pbvs_controller.cpp  test_pbvs_axis.py  test_pbvs_rot.py
flexiv_moveit_codes_niwesh/src/pbvs/include/: pbvs_controller.hpp
flexiv_rdk/example/: basics6_gripper_control.cpp
flexiv_rdk/example_py/: basics6_gripper_control.py
flexiv_rdk/lib/: libflexiv_rdk.aarch64-linux-gnu.ros2-jazzy.a.sha256  libflexiv_rdk.x86_64-linux-gnu.ros2-jazzy.a.sha256
flexiv_rdk/primitiveExecutor/: CMakeLists.txt
flexiv_rdk/primitiveExecutor/include/CLI/: CLIParser.hpp
flexiv_rdk/primitiveExecutor/include/Common/: Logger.hpp  MotionDefaults.hpp  PrimitiveRequest.hpp  SignalHandler.hpp
flexiv_rdk/primitiveExecutor/include/Parser/: AlignContactParser.hpp  ForceCompParser.hpp  ForceHybridParser.hpp  ForceTrajParser.hpp  MoveJParser.hpp  MoveLParser.hpp  MovePTPParser.hpp  ParserFactory.hpp  PrimitiveParser.hpp  VisualServoingParser.hpp
flexiv_rdk/primitiveExecutor/include/Robot/: RobotExecutor.hpp
flexiv_rdk/primitiveExecutor/src/: aruco_marker.py  main.cpp
flexiv_rdk/primitiveExecutor/src/CLI/: CLIParser.cpp
flexiv_rdk/primitiveExecutor/src/Common/: Logger.cpp  SignalHandler.cpp
flexiv_rdk/primitiveExecutor/src/Parser/: AlignContactParser.cpp  ForceCompParser.cpp  ForceHybridParser.cpp  ForceTrajParser.cpp  MoveJParser.cpp  MoveLParser.cpp  MovePTPParser.cpp  ParserFactory.cpp  VisualServoingParser.cpp
flexiv_rdk/primitiveExecutor/src/Robot/: RobotExecutor.cpp
flexiv_rdk/primitiveExecutor/src/config/: global_robot.yaml
flexiv_rdk/primitiveExecutor/src/config/primitives/: alignContact.yaml  forceComp.yaml  forceHybrid.yaml  forceTraj.yaml  visual_servo.yaml
flexiv_rdk/primitives/: CMakeLists.txt  MoveL.cpp  MovePTP.cpp
flexiv_rdk_code/: CMakeLists.txt
flexiv_rdk_code/src/: arcuo_pbvs.cpp  go_home.cpp  ibvs_4_point.cpp  ibvs_aruco_1_point.cpp  ibvs_aruco_4_point.cpp  simple_aruco_code.cpp
flexiv_ros2/: README.md
flexiv_ros2/flexiv_bringup/config/: rizon_controllers.yaml
flexiv_ros2/flexiv_bringup/launch/: rizon_moveit.launch.py
flexiv_ros2/flexiv_gripper/src/: gripper_action_server.cpp
flexiv_ros2/flexiv_moveit_config/config/: rizon_moveit_servo_config.yaml
flexiv_ros2/flexiv_moveit_config/rviz/: moveit.rviz
